# varkitekt

./: .firebaserc  .gitignore  CLAUDE.md  LICENSE  README.md  package-lock.json  package.json
.firebase/: hosting.c2l0ZQ.cache
site/: index.html
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
